--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,8 @@ setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
+#setw -g mode-keys vi
+set -g mouse on
 
 set -g prefix2 C-j                       # GNU-Screen compatible prefix
 #set -g prefix2 M-w                        # GNU-Screen compatible prefix
@@ -93,7 +95,6 @@ bind Tab last-window        # move to last active window
 
 # toggle mouse
 bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
-
 
 # -- urlview -------------------------------------------------------------------
 
