--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,9 +17,9 @@ set -s focus-events on
 #setw -g mode-keys vi
 set -g mouse on
 
-set -g prefix2 C-j                       # GNU-Screen compatible prefix
+set -g prefix2 M-w                       # GNU-Screen compatible prefix
 #set -g prefix2 M-w                        # GNU-Screen compatible prefix
-bind C-a send-prefix -2
+#bind C-a send-prefix -2
 
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
