--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,8 +14,8 @@ setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
-#setw -g mode-keys vi
-set -g mouse on
+setw -g mode-keys vi
+#set -g mouse on
 
 set -g prefix C-w                       # GNU-Screen compatible prefix
 #set -g prefix2 M-w                        # GNU-Screen compatible prefix
