--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ set -s focus-events on
 setw -g mode-keys vi
 #set -g mouse on
 
-set -g prefix C-w                       # GNU-Screen compatible prefix
+set -g prefix C-b                       # GNU-Screen compatible prefix
 #set -g prefix2 M-w                        # GNU-Screen compatible prefix
 #bind C-a send-prefix -2
 
